[posting] add c++ exam code.

--- a/_posts/2017-03-02-01.cplusplus.md
+++ b/_posts/2017-03-02-01.cplusplus.md
@@ -1,10 +1,12 @@
 ---
 layout: post
-title: 1-1.	C언어 기반의 C++ 1(윤성우 열혈강의 C++ 예제코드) 
+title: 1. C언어 기반의 C++ 1(윤성우 열혈강의 C++ 예제코드) 
 ---
 
-### 01. printf와 scanf를 대신하는 입출력 방식
-#### 출력
+## 01. printf와 scanf를 대신하는 입출력 방식
+---
+* 출력
+
 ```cpp
 #include <iostream>
 
@@ -19,7 +21,8 @@ int main(void)
 }
 ```
 
-#### 출력 및 입력(정수)
+* 출력 및 입력(정수)
+
 ```cpp
 #include <iostream>
 
@@ -46,7 +49,8 @@ int main(void)
 }
 ```
 
-#### 출력 및 입력(문자열)
+* 출력 및 입력(문자열)
+
 ```cpp
 #include <iostream>
 
@@ -67,7 +71,10 @@ int main(void)
 }
 ```
 
-### 02. 함수 오버로딩
+## 02. 함수 오버로딩
+---
+* 매개변수의 자료형 또는 개수를 다르게하여 오버로딩
+
 ```
 #include <iostream>
 
@@ -96,8 +103,10 @@ int main(void)
 ```
 
 
-### 03. 매개변수의 디폴트 값
-#### 함수의 선언부가 없는경우
+## 03. 매개변수의 디폴트 값
+---
+* 함수의 선언부가 없는경우
+
 ```cpp
 #include <iostream>
 
@@ -115,7 +124,8 @@ int main(void)
 }
 ```
 
-#### 함수의 선언부가 있는경우
+* 함수의 선언부가 있는경우
+
 ```cpp
 #include <iostream>
 
@@ -135,7 +145,8 @@ int Adder(int num1, int num2)
 }
 ```
 
-#### 부분적으로 디폴트값을 적용하는 경우(우->좌)
+* 부분적으로 디폴트값을 적용하는 경우(우->좌)
+
 ```cpp
 #include <iostream>
 
@@ -155,7 +166,8 @@ int Adder(int num1, int num2)
 }
 ```
 
-### 04. 인라인 함수
+## 04. 인라인 함수
+---
 ```
 #include <iostream>
 
@@ -172,8 +184,10 @@ int main(void)
 }
 ```
 
-### 05. 네임스페이스
-#### 범위지정 연산자 기본케이스
+## 05. 네임스페이스
+---
+* 범위지정 연산자 기본케이스
+
 ```
 #include <iostream>
 
@@ -276,7 +290,8 @@ void ProgComImpl::SimpleFunc(void)
 }
 ```
 
-#### alias(범위지정 연산자의 depth가 있는경우)
+* alias(범위지정 연산자의 depth가 있는경우)
+
 ```
 #include <iostream>
 using namespace std;
@@ -306,7 +321,8 @@ int main(void)
 }
 ```
 
-#### using을 이용한 네임스페이스 명시1
+* using을 이용한 네임스페이스 명시1
+
 ```
 #include <iostream>
 
@@ -327,7 +343,8 @@ int main(void)
 }
 ```
 
-#### using을 이용한 네임스페이스 명시2
+* using을 이용한 네임스페이스 명시2
+
 ```
 #include <iostream>
 using std::cin;
@@ -345,7 +362,8 @@ int main(void)
 }
 ```
 
-#### using을 이용한 네임스페이스 명시3
+* using을 이용한 네임스페이스 명시3
+
 ```
 #include <iostream>
 using namespace std;
