[posting] add c++ exam code.

--- a/_posts/2017-03-04-01.cplusplus.md
+++ b/_posts/2017-03-04-01.cplusplus.md
@@ -3,7 +3,7 @@ layout: post
 title: 5. 복사 생성자(윤성우 열혈강의 C++ 예제코드) 
 ---
 
-## '복사 생성자'와의 첫 만남
+## 01. '복사 생성자'와의 첫 만남
 ---
 * 복사 생성자 직접 선언하기
 
@@ -46,7 +46,18 @@ int main(void)
 	return 0;
 }
 ```
-## '깊은 복사'와 '얕은 복사'
+
+* explicit 키워드로 대입연산자에서의 복사생성자 호출막기  
+
+```cpp
+explicit SoSimple(const SoSimple &copy)
+	: num1(copy.num1), num2(copy.num2)
+{
+	cout<<"Called SoSimple(SoSimple &copy)"<<endl;
+}
+```
+
+## 02. '깊은 복사'와 '얕은 복사'
 * shallow copy
 
 ```cpp
@@ -150,7 +161,7 @@ int main(void)
 called destructor!
 called destructor!
 ```
-## 복사 생성자의 호출시점
+## 03. 복사 생성자의 호출시점
 
 * 기존에 생성된 객체를 이용해서 새로운 객체를 초기화
 
