[posting] add c++ exam code.

--- a/_posts/2017-03-05-99.index.md
+++ b/_posts/2017-03-05-99.index.md
@@ -19,23 +19,29 @@ date: 2017-03-05
      * 매개변수의 디폴트 값(Default Value)	
      * 인라인 함수(Inline)함수	
      * 이름공간(namespace)에 대한 소개	
-     2. C언어 기반의 C++ 2
+     2. C언어 기반의 C++ 2 [[링크]](/2017/03/03/01.cplusplus/) 
      * 새로운 자료형 bool	
      * 참조자(Reference)의 이해	
      * 참조자(Reference)와 함수	
      * maloc & free를 대신하는 new & delete	
      * C++에서 C언어의 표준함수 호출하기	
-     3.	클래스의 기본	
+     3.	클래스의 기본 [[링크]](/2017/03/03/02.cplusplus/) 	
      * C++에서의 구조체	
      * 클래스(Class)와 객체(Object)	
      * 객체지향 프로그래밍의 이해	
-     4. 클래스의 완성	
+     4. 클래스의 완성 [[링크]](/2017/03/03/03.cplusplus/) 	
      * 정보은닉(Information Hiding)	
      * 캡슐화(Encapsulation)	
      * 생성자(Constructor)와 소멸자(Destructor)	
      * 클래스와 배열 그리고 this 포인터	
-     5. 복사 생성자	
-     6. friend와 static 그리고 const	
+     5. 복사 생성자 [[링크]](/2017/03/04/01.cplusplus/) 	
+     * '복사 생성자' 와의 첫 만남
+     * '깊은 복사'와 '얕은 복사'
+     * 복사 생성자의 호출시점
+     6. friend와 static 그리고 const [[링크]](/2017/03/04/02.cplusplus/) 	
+	 * const와 관련해서 아직 못다한 이야기
+	 * 클래스와 함수에 대한 friend 선언
+	 *  C++에서의 static
      7. 상속(Inheritance)의 이해	
      8. 상속과 다형성	
      9. 가상(Virtual)의 원리와 다중상속	
