--- a/_posts/2017-03-05-99.index.md
+++ b/_posts/2017-03-05-99.index.md
@@ -43,7 +43,7 @@ date: 2017-03-06T02:00
 	 * const와 관련해서 아직 못다한 이야기
 	 * 클래스와 함수에 대한 friend 선언
 	 *  C++에서의 static
-     7. 상속(Inheritance)의 이해	
+     7. 상속(Inheritance)의 이해 [[링크]](/2017/03/06/01.cplusplus/) 		
 	 * 상속에 들어가기에 앞서
 	 * 상속의 문법적인 이해
 	 * protected 선언과 세 가지 형태의 상속
