--- a/_posts/2017-03-05-99.index.md
+++ b/_posts/2017-03-05-99.index.md
@@ -48,7 +48,7 @@ date: 2017-03-06T02:00
 	 * 상속의 문법적인 이해
 	 * protected 선언과 세 가지 형태의 상속
 	 * 상속을 위한 조건
-	 8. 상속과 다형성	
+	 8. 상속과 다형성 [[링크]](/2017/03/06/02.cplusplus/) 			
 	 * 객체 포인터의 참조관계
 	 * 가상함수(Vitual Function)
 	 * 가상 소멸자와 참조자의 참조 가능성
