[posting] add c++ exam code.

--- a/_posts/2017-03-03-02.cplusplus.md
+++ b/_posts/2017-03-03-02.cplusplus.md
@@ -3,7 +3,7 @@ layout: post
 title: 3. 클래스의 기본(윤성우 열혈강의 C++ 예제코드) 
 ---
 
-## 01. C++에서의 구조체
+#### 3.1. C++에서의 구조체
 ---
 * 구조체 기반의 자료형 사용하기
 
@@ -222,7 +222,7 @@ int main(void)
 }
 ```
 
-## 02. 클래스(CLASS)와 객체(OBJECT)
+#### 3.2. 클래스(CLASS)와 객체(OBJECT)
 ---
 * 클래스 사용하기
 
@@ -406,7 +406,7 @@ int main(void)
 }
 ```
 
-## 03. 객체지향 프로그래밍의 이해
+#### 3.3. 객체지향 프로그래밍의 이해
 ---
 * 관계를 형성하는 둘 이상의 클래스
 
