--- a/_posts/2017-03-03-03.cplusplus.md
+++ b/_posts/2017-03-03-03.cplusplus.md
@@ -3,7 +3,7 @@ layout: post
 title: 4. 클래스의 완성(윤성우 열혈강의 C++ 예제코드) 
 ---
 
-## 01. 정보은닉(INFORMATION HIDING)
+#### 4.1. 정보은닉(INFORMATION HIDING)
 ---
 * access function을 이용한 private member변수 제어하기
 
@@ -155,7 +155,7 @@ int main(void)
 }
 ```
 
-## 02. 캡슐화(ENCAPSULATION)
+#### 4.2. 캡슐화(ENCAPSULATION)
 ---
 * 유사패턴의 클래스를 하나의 클래스로 캡슐화 하기
 
@@ -213,7 +213,7 @@ int main(void)
 ``` 
 
 
-## 03. 생성자(CONSTRUCTOR)와 소멸자(DESTRUCTOR)
+#### 4.3. 생성자(CONSTRUCTOR)와 소멸자(DESTRUCTOR)
 ---
 * 생성자 오버로딩
 
@@ -492,7 +492,7 @@ int main(void)
 }
 ```
 
-## 04. 클래스와 배열 그리고 THIS 포인터
+#### 4.4. 클래스와 배열 그리고 THIS 포인터
 ---
 * 객체배열 사용하기
 
