--- a/_posts/2017-03-04-01.cplusplus.md
+++ b/_posts/2017-03-04-01.cplusplus.md
@@ -3,7 +3,7 @@ layout: post
 title: 5. 복사 생성자(윤성우 열혈강의 C++ 예제코드) 
 ---
 
-## 01. '복사 생성자'와의 첫 만남
+#### 5.1. '복사 생성자'와의 첫 만남
 ---
 * 복사 생성자 직접 선언하기
 
@@ -57,7 +57,7 @@ explicit SoSimple(const SoSimple &copy)
 }
 ```
 
-## 02. '깊은 복사'와 '얕은 복사'
+#### 5.2. '깊은 복사'와 '얕은 복사'
 * shallow copy
 
 ```cpp
@@ -161,7 +161,7 @@ int main(void)
 called destructor!
 called destructor!
 ```
-## 03. 복사 생성자의 호출시점
+#### 5.3. 복사 생성자의 호출시점
 
 * 기존에 생성된 객체를 이용해서 새로운 객체를 초기화
 
