--- a/_posts/2017-03-04-02.cplusplus.md
+++ b/_posts/2017-03-04-02.cplusplus.md
@@ -3,7 +3,7 @@ layout: post
 title: 6. friend와 static 그리고 const
 ---
 
-## 01. const와 관련해서 아직 못다한 이야기
+#### 6.1. const와 관련해서 아직 못다한 이야기
 ---
 * const를 이용한 overloading
 
@@ -59,7 +59,7 @@ const SimpleFunc: 2
 const SimpleFunc: 7
 ```
 
-## 02. 클래스와 함수에 대한 friend 선언
+#### 6.2. 클래스와 함수에 대한 friend 선언
 ---
 * 클래스에 friend 선언하기(클래스의 private 멤버를 외부에서 접근)
 
@@ -182,7 +182,7 @@ void ShowPointPos(const Point& pos)
 }
 ```
 
-## 03. C++에서의 static
+#### 6.3. C++에서의 static
 ---
 
 * static 멤버변수 사용하기(private)
