--- a/_posts/2017-03-06-02.cplusplus.md
+++ b/_posts/2017-03-06-02.cplusplus.md
@@ -4,7 +4,7 @@ title: 8. 상속과 다형성
 date: 2017-03-06T01:00
 ---
 
-## 01. 객체 포인터의 참조관계
+#### 8.1. 객체 포인터의 참조관계
 * Base Class형 변수로 Derived Class 객체 다루기
 
 ```cpp
@@ -41,7 +41,7 @@ int main(void)
 	return 0;
 }
 ```
-## 02. 가상함수(Vitual Function)
+#### 8.2. 가상함수(Vitual Function)
 
 * 가상함수를 이용하여 override한 함수 호출하기(포인터)
 
@@ -202,7 +202,7 @@ int main(void)
 }
 ```
 
-## 03. 가상 소멸자와 참조자의 참조 가능성
+#### 8.3. 가상 소멸자와 참조자의 참조 가능성
 
 * 가상 소멸자 이용하기
 
