--- a/_posts/2017-03-02-01.cplusplus.md
+++ b/_posts/2017-03-02-01.cplusplus.md
@@ -3,7 +3,7 @@ layout: post
 title: 1. C언어 기반의 C++ 1(윤성우 열혈강의 C++ 예제코드) 
 ---
 
-## 01. printf와 scanf를 대신하는 입출력 방식
+#### 1.1. printf와 scanf를 대신하는 입출력 방식
 ---
 * 출력
 
@@ -71,7 +71,7 @@ int main(void)
 }
 ```
 
-## 02. 함수 오버로딩
+#### 1.2. 함수 오버로딩
 ---
 * 매개변수의 자료형 또는 개수를 다르게하여 오버로딩
 
@@ -103,7 +103,7 @@ int main(void)
 ```
 
 
-## 03. 매개변수의 디폴트 값
+#### 1.3. 매개변수의 디폴트 값
 ---
 * 함수의 선언부가 없는경우
 
@@ -166,7 +166,7 @@ int Adder(int num1, int num2)
 }
 ```
 
-## 04. 인라인 함수
+#### 1.4. 인라인 함수
 ---
 ```
 #include <iostream>
@@ -184,7 +184,7 @@ int main(void)
 }
 ```
 
-## 05. 네임스페이스
+#### 1.5. 네임스페이스
 ---
 * 범위지정 연산자 기본케이스
 
