--- a/_posts/2017-03-03-01.cplusplus.md
+++ b/_posts/2017-03-03-01.cplusplus.md
@@ -4,7 +4,7 @@ title: 2. C언어 기반의 C++ 2(윤성우 열혈강의 C++ 예제코드)
 ---
 
 
-## 01. 새로운 자료형 BOOL
+#### 2.1. 새로운 자료형 BOOL
 ---
 * bool자료형의 크기
 
@@ -21,7 +21,7 @@ int main(void)
 	return 0;
 }
 ```
-### 02. 참조자(REFERENCE)의 이해
+##### 2.2. 참조자(REFERENCE)의 이해
 ---
 * 참조자에 변수할당 후 참조자의 값을 변경
 
@@ -96,7 +96,7 @@ int main(void)
 12
 12
 ```
-### 03. 참조자(REFERENCE)와 함수
+##### 2.3. 참조자(REFERENCE)와 함수
 ---
 * reference를 이용한 변수 swap
 
@@ -123,7 +123,7 @@ int main(void)
 }
 ```
 
-### 04. MALOC & FREE를 대신하는 NEW & DELETE
+##### 2.4. MALOC & FREE를 대신하는 NEW & DELETE
 ---
 * malloc & free 이용한 메모리 할당과 해제
 
@@ -174,7 +174,7 @@ int main(void)
 
 ```
 
-### 05. C++에서 C언어의 표준함수 호출하기
+##### 2.5. C++에서 C언어의 표준함수 호출하기
 ---
 * header include define 시 c를 더하고 .h를 제거함
 
