--- a/_posts/2017-03-05-99.index.md
+++ b/_posts/2017-03-05-99.index.md
@@ -6,64 +6,65 @@ date: 2017-03-06T02:00
 
    
 ---
-# NOSQL
+<h1 style="background:aliceblue;padding-left:10px;">NOSQL</h1>
  * mongoDB
-   * mongoDB 설치 가이드 및 CRUD 예제 [[링크]](/2016/11/17/02.post.mongodb/) 
-
+   * mongoDB 설치 가이드 및 CRUD 예제 [[보기]](/2016/11/17/02.post.mongodb/) 
+   * mongoDB 테스트용 json파일 import 및 document(bson) 조회 [[보기]](/2016/11/17/03.post.mongodb/)  
+   
 ---
-# C++ 
- * C++ keywords [[링크]](/2017/03/05/98.keywords/) 
+<h1 style="background:aliceblue;padding-left:10px;">C++</h1>
+ * C++ keywords [[보기]](/2017/03/05/98.keywords/) 
  * 윤성우 열혈강의 C++ 프로그래밍 예제코드
-     1. C언어 기반의 C++ 1 [[링크]](/2017/03/02/01.cplusplus/) 
+     1. C언어 기반의 C++ 1 [[보기]](/2017/03/02/01.cplusplus/) 
      * printf와 scanf를 대신하는 입출력 방식	
      * 함수 오버로딩(Function Overloading)	
      * 매개변수의 디폴트 값(Default Value)	
      * 인라인 함수(Inline)함수	
      * 이름공간(namespace)에 대한 소개	
-     2. C언어 기반의 C++ 2 [[링크]](/2017/03/03/01.cplusplus/) 
+     2. C언어 기반의 C++ 2 [[보기]](/2017/03/03/01.cplusplus/) 
      * 새로운 자료형 bool	
      * 참조자(Reference)의 이해	
      * 참조자(Reference)와 함수	
      * maloc & free를 대신하는 new & delete	
      * C++에서 C언어의 표준함수 호출하기	
-     3.	클래스의 기본 [[링크]](/2017/03/03/02.cplusplus/) 	
+     3.	클래스의 기본 [[보기]](/2017/03/03/02.cplusplus/) 	
      * C++에서의 구조체	
      * 클래스(Class)와 객체(Object)	
      * 객체지향 프로그래밍의 이해	
-     4. 클래스의 완성 [[링크]](/2017/03/03/03.cplusplus/) 	
+     4. 클래스의 완성 [[보기]](/2017/03/03/03.cplusplus/) 	
      * 정보은닉(Information Hiding)	
      * 캡슐화(Encapsulation)	
      * 생성자(Constructor)와 소멸자(Destructor)	
      * 클래스와 배열 그리고 this 포인터	
-     5. 복사 생성자 [[링크]](/2017/03/04/01.cplusplus/) 	
+     5. 복사 생성자 [[보기]](/2017/03/04/01.cplusplus/) 	
      * '복사 생성자' 와의 첫 만남
      * '깊은 복사'와 '얕은 복사'
      * 복사 생성자의 호출시점
-     6. friend와 static 그리고 const [[링크]](/2017/03/04/02.cplusplus/) 	
+     6. friend와 static 그리고 const [[보기]](/2017/03/04/02.cplusplus/) 	
 	 * const와 관련해서 아직 못다한 이야기
 	 * 클래스와 함수에 대한 friend 선언
 	 *  C++에서의 static
-     7. 상속(Inheritance)의 이해 [[링크]](/2017/03/06/01.cplusplus/) 		
+     7. 상속(Inheritance)의 이해 [[보기]](/2017/03/06/01.cplusplus/) 		
 	 * 상속에 들어가기에 앞서
 	 * 상속의 문법적인 이해
 	 * protected 선언과 세 가지 형태의 상속
 	 * 상속을 위한 조건
-	 8. 상속과 다형성 [[링크]](/2017/03/06/02.cplusplus/) 			
+	 8. 상속과 다형성 [[보기]](/2017/03/06/02.cplusplus/) 			
 	 * 객체 포인터의 참조관계
 	 * 가상함수(Vitual Function)
 	 * 가상 소멸자와 참조자의 참조 가능성
-	 9. 가상(Virtual)의 원리와 다중상속	
+	 9. 가상(Virtual)의 원리와 다중상속 [[보기]](/2017/03/06/03.cplusplus/) 				
 	 * 멤버함수와 가상함수의 동작원리
 	 * 다중상속(Multiple Inheritance)에 대한 이해
-	 10. 연산자 오버로딩 1	
+	 10. 연산자 오버로딩 1 [[보기]](/2017/03/06/04.cplusplus/) 					
 	 * 연산자 오버로딩의 이해와 유형
 	 * 단항 연산자의 오버로딩의
 	 * 교환법칙 문제의 해결
 	 * cout, cin 그리고 endl의 정체
      11. 연산자 오버로딩 2	
-	 * 반드시 해야 하는 대입 연산자의 오버로딩의
-	 * 배열의 인덱스 연산자 오버로딩의
-	 * 그 이외의 연산자 오버로딩의
+	 * 반드시 해야 하는 대입 연산자의 오버로딩
+	 * 배열의 인덱스 연산자 오버로딩
+	 * 그 이외의 연산자 오버로딩
 	 12. String 클래스의 디자인	
 	 * C++ 표준과 표즌 string 클래스
 	 * 문자열 처리 클래스의 정의
@@ -87,7 +88,7 @@ date: 2017-03-06T02:00
 	 * '윤성우의 열혈 C++ 프로그래밍' 맺는 글
 
 ---
-# ETC
+<h1 style="background:aliceblue;padding-left:10px;">ETC</h1>
 
 
 
