--- a/_posts/2017-03-06-01.cplusplus.md
+++ b/_posts/2017-03-06-01.cplusplus.md
@@ -4,7 +4,7 @@ title: 7. 상속(Inheritance)의 이해
 date: 2017-03-06T01:00
 ---
 
-## 01. 상속에 들어가기에 앞서
+#### 7.1. 상속에 들어가기에 앞서
 * OOP Handler Class 사용하기
 
 ```cpp
@@ -83,7 +83,7 @@ int main(void)
 	return 0;
 }
 ```
-## 02. 상속의 문법적인 이해
+#### 7.2. 상속의 문법적인 이해
 * 이니셜라이저를 이용한 Base Class 생성자 호출
 
 ```cpp
@@ -194,7 +194,7 @@ SoDerived() : 27
 ~SoBase() : 15
 ```
 
-## 03. protected 선언과 세 가지 형태의 상속
+#### 7.3. protected 선언과 세 가지 형태의 상속
 * 세 가지 형태의 상속
 
 ```cpp
@@ -218,7 +218,7 @@ class Derived : private Base    // 모두 접근이 불가하므로 의미없음
 	...
 }
 ```
-## 04. 상속을 위한 조건
+#### 7.4. 상속을 위한 조건
 * IS-A 관계의 상속	 
 
 ```cpp
