--- a/_posts/2017-03-05-99.index.md
+++ b/_posts/2017-03-05-99.index.md
@@ -65,7 +65,7 @@ date: 2017-03-07T02:00
 	 * 반드시 해야 하는 대입 연산자의 오버로딩
 	 * 배열의 인덱스 연산자 오버로딩
 	 * 그 이외의 연산자 오버로딩
-	 12. String 클래스의 디자인	
+	 12. String 클래스의 디자인 [[보기]](/2017/03/07/02.cplusplus/) 							
 	 * C++ 표준과 표즌 string 클래스
 	 * 문자열 처리 클래스의 정의
 	 13. 템플릿(Template) 1	
