[posting] add c++ exam code.

--- a/_posts/2017-03-05-99.index.md
+++ b/_posts/2017-03-05-99.index.md
@@ -68,10 +68,10 @@ date: 2017-03-07T02:00
 	 12. String 클래스의 디자인 [[보기]](/2017/03/07/02.cplusplus/) 							
 	 * C++ 표준과 표즌 string 클래스
 	 * 문자열 처리 클래스의 정의
-	 13. 템플릿(Template) 1	
+	 13. 템플릿(Template) 1	[[보기]](/2017/03/07/03.cplusplus/) 							
 	 * 템플릿(Template)에 대한 이해와 함수 템플릿
 	 * 클래스 템플릿(Class Temlpate)
-     14. 템플릿(Template) 2	
+     14. 템플릿(Template) 2	[[보기]](/2017/03/07/04.cplusplus/) 								
 	 * Chapter 13에서 공부한 내용의 확장
 	 * 클래스 템플릿의 특수화(Class Temlpate Specialization)
 	 * 템플릿의 인자
