[posting] add c++ exam code.

--- a/_posts/2017-03-03-02.cplusplus.md
+++ b/_posts/2017-03-03-02.cplusplus.md
@@ -2,9 +2,12 @@
 layout: post
 title: 3. 클래스의 기본(윤성우 열혈강의 C++ 예제코드) 
 ---
-
-#### 3.1. C++에서의 구조체
 ---
+
+출처: 윤성우 열혈강의 C++ 예제코드
+
+---
+#### 3.1. C++에서의 구조체
 * 구조체 기반의 자료형 사용하기
 
 
