--- a/_posts/2017-03-03-03.cplusplus.md
+++ b/_posts/2017-03-03-03.cplusplus.md
@@ -2,9 +2,12 @@
 layout: post
 title: 4. 클래스의 완성(윤성우 열혈강의 C++ 예제코드) 
 ---
-
-#### 4.1. 정보은닉(INFORMATION HIDING)
 ---
+
+출처: 윤성우 열혈강의 C++ 예제코드
+
+---
+#### 4.1. 정보은닉(INFORMATION HIDING)
 * access function을 이용한 private member변수 제어하기
 
 ```cpp
