--- a/_posts/2017-03-04-01.cplusplus.md
+++ b/_posts/2017-03-04-01.cplusplus.md
@@ -2,9 +2,12 @@
 layout: post
 title: 5. 복사 생성자(윤성우 열혈강의 C++ 예제코드) 
 ---
-
-#### 5.1. '복사 생성자'와의 첫 만남
 ---
+
+출처: 윤성우 열혈강의 C++ 예제코드
+
+---
+#### 5.1. '복사 생성자'와의 첫 만남
 * 복사 생성자 직접 선언하기
 
 ```cpp
