--- a/_posts/2017-03-04-02.cplusplus.md
+++ b/_posts/2017-03-04-02.cplusplus.md
@@ -2,9 +2,12 @@
 layout: post
 title: 6. friend와 static 그리고 const
 ---
-
-#### 6.1. const와 관련해서 아직 못다한 이야기
 ---
+
+출처: 윤성우 열혈강의 C++ 예제코드
+
+---
+#### 6.1. const와 관련해서 아직 못다한 이야기
 * const를 이용한 overloading
 
 ```cpp
