--- a/_posts/2017-03-05-99.index.md
+++ b/_posts/2017-03-05-99.index.md
@@ -76,16 +76,14 @@ date: 2017-03-07T02:00
 	 * 클래스 템플릿의 특수화(Class Temlpate Specialization)
 	 * 템플릿의 인자
 	 * 템플릿과 static
-     15. 예외처리(Exception Handling)
-	 * 예외상황과 예외처리의 이해와
+     15. 예외처리(Exception Handling) [[보기]](/2017/03/07/05.cplusplus/) 								
+	 * 예외상황과 예외처리의 이해
 	 * C++의 예외처리 메커니즘
 	 * Stack Unwinding(스택 풀기)
 	 * 예외상황을 표현하는 예외 클래스의 설계
 	 * 예외처리와 관련된 또 다른 특성들
-	 * OOP 단계별 프로젝트 11단계
-	 16. C++의 형 변환 연산자와 맺는 글
-	 * C++에서의 형 변환 연산자
-	 * '윤성우의 열혈 C++ 프로그래밍' 맺는 글
+	 16. C++의 형 변환 연산자
+	 * C++에서의 형 변환 연산자 
 
 ---
 <h1 style="background:aliceblue;padding-left:10px;">ETC</h1>
