--- a/_posts/2017-03-06-02.cplusplus.md
+++ b/_posts/2017-03-06-02.cplusplus.md
@@ -3,7 +3,11 @@ layout: post
 title: 8. 상속과 다형성
 date: 2017-03-06T01:00
 ---
+---
 
+출처: 윤성우 열혈강의 C++ 예제코드
+
+---
 #### 8.1. 객체 포인터의 참조관계
 * Base Class형 변수로 Derived Class 객체 다루기
 
