--- a/_posts/2017-03-07-01.cplusplus.md
+++ b/_posts/2017-03-07-01.cplusplus.md
@@ -3,6 +3,9 @@ layout: post
 title: 11. 연산자 오버로딩 2
 date: 2017-03-07T01:00
 ---
+---
+
+출처: 윤성우 열혈강의 C++ 예제코드
 
 ---
 #### 11.1. 반드시 해야 하는 대입 연산자의 오버로딩
