--- a/_posts/2017-03-07-02.cplusplus.md
+++ b/_posts/2017-03-07-02.cplusplus.md
@@ -3,6 +3,9 @@ layout: post
 title: 12. String 클래스의 디자인
 date: 2017-03-07T01:00
 ---
+---
+
+출처: 윤성우 열혈강의 C++ 예제코드
 
 ---
 #### 12.1. C++ 표준과 표즌 string 클래스
