--- a/_posts/2017-03-07-03.cplusplus.md
+++ b/_posts/2017-03-07-03.cplusplus.md
@@ -3,6 +3,9 @@ layout: post
 title: 13. 템플릿(Template) 1	
 date: 2017-03-07T01:00
 ---
+---
+
+출처: 윤성우 열혈강의 C++ 예제코드
 
 ---
 #### 13.1. 템플릿(Template)에 대한 이해와 함수 템플릿
