--- a/_posts/2017-03-07-04.cplusplus.md
+++ b/_posts/2017-03-07-04.cplusplus.md
@@ -3,6 +3,9 @@ layout: post
 title: 14. 템플릿(Template) 2
 date: 2017-03-07T01:00
 ---
+---
+
+출처: 윤성우 열혈강의 C++ 예제코드
 
 ---
 #### 14.1. Chapter 13에서 공부한 내용의 확장
