--- a/_posts/2017-03-02-01.cplusplus.md
+++ b/_posts/2017-03-02-01.cplusplus.md
@@ -1,10 +1,13 @@
 ---
 layout: post
-title: 1. C언어 기반의 C++ 1(윤성우 열혈강의 C++ 예제코드) 
+title: 1. C언어 기반의 C++ 1 
+---
 ---
 
-#### 1.1. printf와 scanf를 대신하는 입출력 방식
+출처: 윤성우 열혈강의 C++ 예제코드
+
 ---
+#### 1.1. printf와 scanf를 대신하는 입출력 방식
 * 출력
 
 ```cpp
