--- a/_posts/2017-03-03-01.cplusplus.md
+++ b/_posts/2017-03-03-01.cplusplus.md
@@ -2,10 +2,12 @@
 layout: post
 title: 2. C언어 기반의 C++ 2(윤성우 열혈강의 C++ 예제코드) 
 ---
-
-
-#### 2.1. 새로운 자료형 BOOL
 ---
+
+출처: 윤성우 열혈강의 C++ 예제코드
+
+---
+#### 2.1. 새로운 자료형 BOOL
 * bool자료형의 크기
 
 ```cpp
