--- a/_posts/2017-03-06-01.cplusplus.md
+++ b/_posts/2017-03-06-01.cplusplus.md
@@ -3,7 +3,11 @@ layout: post
 title: 7. 상속(Inheritance)의 이해
 date: 2017-03-06T01:00
 ---
+---
 
+출처: 윤성우 열혈강의 C++ 예제코드
+
+---
 #### 7.1. 상속에 들어가기에 앞서
 * OOP Handler Class 사용하기
 
