--- a/_posts/2017-03-06-03.cplusplus.md
+++ b/_posts/2017-03-06-03.cplusplus.md
@@ -3,6 +3,9 @@ layout: post
 title: 9. 가상(Virtual)의 원리와 다중상속
 date: 2017-03-06T01:00
 ---
+---
+
+출처: 윤성우 열혈강의 C++ 예제코드
 
 ---
 #### 9.1. 멤버함수와 가상함수의 동작원리
