--- a/_posts/2017-03-05-99.index.md
+++ b/_posts/2017-03-05-99.index.md
@@ -82,8 +82,8 @@ date: 2017-03-07T02:00
 	 * Stack Unwinding(스택 풀기)
 	 * 예외상황을 표현하는 예외 클래스의 설계
 	 * 예외처리와 관련된 또 다른 특성들
-	 16. C++의 형 변환 연산자
-	 * C++에서의 형 변환 연산자 
+	 16. C++의 형 변환 연산자 [[보기]](/2017/03/07/06.cplusplus/) 								
+	 * C++에서의 형 변환 연산 
 
 ---
 <h1 style="background:aliceblue;padding-left:10px;">ETC</h1>
