[posting] android lib module 생성 후 application에서 참조하기

--- a/_posts/2017-03-05-99.index.md
+++ b/_posts/2017-03-05-99.index.md
@@ -21,7 +21,11 @@ date: 2017-03-09T02:00
 <h1 style="background:aliceblue;padding-left:10px;">JEKYLL</h1>
  * jekyll 환경구축
    * ruby 및 thirdparty lib 설치하기 [[보기]](/2017/03/08/01.jekyll/) 
-                                               
+
+---
+<h1 style="background:aliceblue;padding-left:10px;">GRADLE</h1>
+ * android lib module 생성 후 application에서 참조하기 [[보기]](/2017/03/09/02.gradle.android/)    
+   
 ---
 <h1 style="background:aliceblue;padding-left:10px;">C++</h1>
  * C++ keywords [[보기]](/2017/03/05/98.keywords/) 
